--- a/views/templates/postreply.hbs
+++ b/views/templates/postreply.hbs
@@ -42,9 +42,6 @@
                     <div class="downbit">
                         <img src="/static/img/down-arrow-regular-24.png"/>
                     </div>
-                    <div class="share">
-                        <img src="/static/img/share-regular-24.png"/>
-                    </div>
                     <div class="replybutton"><a href=""> Reply </a></div>
                 </div>
                 </div>
@@ -61,8 +58,8 @@
         </div>
         </div>
 
-        {{#if replies}}
-            {{#each replies}}
-                    {{> postreply this}}
+        {{#if this.replies}}
+            {{#each this.replies}}
+                    {{> postreply this}} 
             {{/each}}
         {{/if}}
