--- a/views/templates/postview.hbs
+++ b/views/templates/postview.hbs
@@ -22,7 +22,7 @@
     </div>
     <div class="postpicturecontent">
         {{#if postpicturecontent}}
-            <img src="{{postpicturecontent}}"/>
+            <img class = "piccontent" src="{{postpicturecontent}}"/>
         {{else}}
             <span></span>
         {{/if}}
