--- a/public/css/viewpost.css
+++ b/public/css/viewpost.css
@@ -537,3 +537,14 @@ input[type="text"] {
     margin: 10px;
     font-size: 12px;
 }
+
+.edit-textarea, .edit-postarea{
+    background-color: #FFFDFA;
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-sizing: border-box;
+    resize: none;
+}
