--- a/views/templates/postreply.hbs
+++ b/views/templates/postreply.hbs
@@ -4,9 +4,9 @@
                     <input type="hidden" id="replyId" value="{{this.replyId}}">
 
                     <div class="replypfp"> 
-                        <a href="{{this.user.userhandlelink}}"> <img class="userimg" src="{{this.user.pfplink}}"> </a>
+                        <a href="{{user.userhandlelink}}"> <img class="userimg" src="{{user.pfplink}}"> </a>
                     </div>
-                    <p> {{this.user.username}} {{this.currentUser.username}} <br><span> {{this.user.userhandle}} </span><br> Bits: {{this.user.bits}}</p>
+                    <p> {{user.username}}<span> {{user.userhandle}} </span><br> Bits: {{user.bits}}</p>
                     <div class="postdate"> 
                         <h5> Posted on: {{this.replydate}} </h5>
                         <p> {{this.ReplyDateDistance}} </p>
@@ -15,25 +15,22 @@
                 
                 
                 <div class="replycontent"> 
-                    <p> {{this.replycontent}} <br> </p>
+                    <p class = "replyvalue"> {{this.replycontent}} <br> </p>
+                    <div class="edit-reply-form" style="display: none;">
+                            <textarea class="edit-textarea"></textarea>
+                            <button type="button" class="savereplybutton">Save</button>
+                    </div>
                     <div class="footer">
                     {{#if isOwner}}
                         <div class = "editanddelete">
                             <button type = "button" class = "editreplybutton"> Edit </button>
                             <button type = "button" class = "deletereplybutton"> Delete </button>
                         </div>
-                        <div class="edit-reply-form" style="display: none;">
-                            <textarea class="edit-textarea"></textarea>
-                            <button type="button" class="savereplybutton">Save</button>
-                        </div>
+                        
                     {{else}}
                         <div class = "editanddelete" style="display: none;">
                             <button type = "button" class = "editreplybutton"> Edit </button>
                             <button type = "button" class = "deletereplybutton"> Delete </button>
-                        </div>
-                        <div class="edit-post-form" style="display: none;">
-                            <textarea class="edit-textarea"></textarea>
-                            <button type="button" class="save-button">Save</button>
                         </div>
                     {{/if}}
                     <div class="upbit">
@@ -42,24 +39,10 @@
                     <div class="downbit">
                         <img src="/static/img/down-arrow-regular-24.png"/>
                     </div>
-                    <div class="replybutton"><a href=""> Reply </a></div>
                 </div>
                 </div>
             </div>
-            <div class="replyinputarea"> 
-            <div class="replyinputbox">
-                <form action="/submitsubreply/{{this.replyId}}" method="POST"> 
-                <input type="text" id="replytextcontent" name="replytextcontent" placeholder="Reply to this post..."/> 
-            </div>
-            <div class="replybutton"><button type="submit" value="submit"> Reply </button> </div>
-           
-            </form>
             
         </div>
-        </div>
 
-        {{#if this.replies}}
-            {{#each this.replies}}
-                    {{> postreply this}} 
-            {{/each}}
-        {{/if}}
+       
