--- a/views/mainpage_logged.hbs
+++ b/views/mainpage_logged.hbs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <link rel="stylesheet" href="/static/css/main.css"/>
+<script src="/static/js/mainpages.js" defer></script>
 <html>
     <title>
         Byte | Home 
