community filters work

--- a/views/main_community.hbs
+++ b/views/main_community.hbs
@@ -57,7 +57,7 @@
                             <span>{{community.communitydisplayname}}</span>
                         </div>
                         <div class="communityhandle">
-                            <span>{{community.community}}</span>
+                            <span class = "comhandle">{{community.community}}</span>
                         </div>
                     </div>
                     <div class="commuinitybuttons">
@@ -120,14 +120,10 @@
                     </div>
                 </div>
                 <div class="newposts">
-                    <a href="/newposts">
                     <img src="/static/img/badge-regular-24.png">
-                    </a>
                 </div>
                 <div class="hotposts">
-                    <a href="/hotposts">
                     <img src="/static/img/hot-solid-24.png">
-                    </a>
                 </div>
             </div>
             {{#each posts}}
