Functionality for upvote/downvote works along w/ database updates
Needs tracking of whether currUser upvoted/downvoted a post/reply

--- a/views/samplepost1.hbs
+++ b/views/samplepost1.hbs
@@ -91,10 +91,14 @@
                 {{/if}}
                 <div class="footer">
                     <div class="upbit">
+                        <span> {{shortenVotes correctPost.upvotes}}</span>
                         <img src="/static/img/up-arrow-regular-24.png"/>
+                        
                     </div>
                     <div class="downbit">
+                        <span> {{shortenVotes correctPost.downvotes}}</span>
                         <img src="/static/img/down-arrow-regular-24.png"/>
+                        
                     </div>
                 </div>
             </div>
