--- a/views/templates/postreply.hbs
+++ b/views/templates/postreply.hbs
@@ -34,9 +34,11 @@
                         </div>
                     {{/if}}
                     <div class="upbit">
+                        <span> {{shortenVotes this.upvotes}}</span>
                         <img src="/static/img/up-arrow-regular-24.png"/>
                     </div>
                     <div class="downbit">
+                        <span> {{shortenVotes this.downvotes}}</span>
                         <img src="/static/img/down-arrow-regular-24.png"/>
                     </div>
                 </div>
