--- a/public/css/Sign_up.css
+++ b/public/css/Sign_up.css
@@ -101,7 +101,7 @@ body{
     position: fixed;
     top: 80px;
     width: 40%;
-    height: 55%;
+    height: 60%;
     overflow: hidden;
     box-shadow: 0px 4px
     10px -4px #C1ACBA;
@@ -138,6 +138,22 @@ input[type="text"], [type = "password"] {
     padding-left: 57px;
 
 }
+.errorMsg{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 10%;
+    justify-content: center;
+    color: red;
+    font-style: italic;
+    font-size: 12px;
+    padding-bottom: 0;
+    padding-top: 0;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+
 
 .submitbutton{
     font-size: 18px;
