--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <head>
     <link rel="stylesheet" type="text/css" href="/static/css/Sign_up.css"/>
+    <script src="/static/js/signup.js" defer></script>
+
 </head>
 <body>
 
@@ -24,7 +26,7 @@
         <div class = "header">
             <span class ="blocktitle"> User Registration </span>
         </div>
-    <form action = "/submitsignup" method="POST">
+    <form id = "signUpForm" >
     <!--change link to logged in version later-->
         <div class = "Username">
             <label for="username">Username:</label>
@@ -49,6 +51,10 @@
         <div class = "noAccount">
             <span> Already have an account? <a href = "/Sign_in"> Log In  </a> here!
             </span>
+        </div>
+
+        <div class = "errorMsg">
+            <span class = "errorarea"></span>
         </div>
 
         <div class = "submit">
