Sessions are fully functional

--- a/views/mainpage_logged.hbs
+++ b/views/mainpage_logged.hbs
@@ -37,7 +37,7 @@
                             </div>
                         </div>
                         <div class="topbuttons">
-                            <a href="/Sign_up"> Log out </a>
+                            <a href="/Log_out"> Log out </a>
                         </div>
                     </div>
                 </div>
