--- a/public/css/main.css
+++ b/public/css/main.css
@@ -599,6 +599,7 @@ body
 
 .downbit
 {
+    padding-left: 10px;
     display: flex;
     height: 24px;
 }
@@ -616,6 +617,7 @@ body
 
 .comment
 {
+    padding-left: 10px;
     width: 24px;
     height: 24px;
 }
