--- a/public/css/main_community.css
+++ b/public/css/main_community.css
@@ -790,6 +790,7 @@ body
 
 .downbit
 {
+    padding-left: 15px;
     width: 24px;
     height: 24px;
 }
@@ -807,6 +808,7 @@ body
 
 .comment
 {
+    padding-left: 15px;
     width: 24px;
     height: 24px;
 }
