--- a/views/mainpage_logged.hbs
+++ b/views/mainpage_logged.hbs
@@ -69,8 +69,11 @@
                           <i class="fa fa-caret-down"></i>
                         </button>
                         <div class="dropdown-content">
-                          <a href="/main_community/apple">r/apple</a>
-                          <a href="/main_community/webdev">r/webdev</a>
+                          <a href="/main_community/apple">b/apple</a>
+                          <a href="/main_community/webdev">b/webdev</a>
+                          <a href="/main_community/pcmasterrace">b/pcmasterrace</a>
+                          <a href="/main_community/pcbuilding">b/pcbuilding</a>
+                          <a href="/main_community/philippines">b/philippines</a>
                         </div>
                     </div>
                 </div>
