--- a/views/samplepost1.hbs
+++ b/views/samplepost1.hbs
@@ -67,7 +67,7 @@
                 <p id ="postcontent"> {{correctPost.postcontent}} </p>
                 <div class="postpicturecontent">
                 {{#if correctPost.postpicturecontent}}
-                    <img src="{{correctPost.postpicturecontent}}"/>
+                    <img class= "postviewclass1" src="{{correctPost.postpicturecontent}}"/>
                 {{/if}}
                 </div>
                 {{#if postOwner}}
