--- a/public/css/viewpost.css
+++ b/public/css/viewpost.css
@@ -197,6 +197,16 @@ body
     font-size: 8px;
 }
 
+.postviewclass1{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 10px;
+}
+
 .topbuttons {
     display: flex;
     float: right;
