polished the changes

--- a/views/templates/postview.hbs
+++ b/views/templates/postview.hbs
@@ -10,7 +10,7 @@
             <span class="postedon"><a href="{{communityinfo.communitylink}}">{{communityinfo.community}}</a></span>
             <span>·</span>
             <span>Posted by</span>
-            <span class="postedby"><a href="{{user.userhandlelink}}">{{user.username}}</a></span>
+            <span class="postedby"><a href="{{user.userprofilelink}}">{{user.username}}</a></span>
             <span class="postdate">{{relativeTime dateofpost}}</span>
         </div>
     </div>
